@@ -9,6 +9,11 @@
 	(twittering-make-display-spec-for-icon): Check the return value of
 	`twittering-retrieve-image'.
 
+	* twittering-mode.el (twittering-format-status): Don't check
+	`twittering-image-data-table' here.
+	(twittering-format-status): Don't define `profile-image' as
+	flet'ed function for the specifier "%i".
+
 2010-02-22  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
